--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1"
   },
+  "engines": {
+    "node": ">=16.x"
+  },
   "devDependencies": {
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
