--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-scripts": "^5.0.1"
   },
   "engines": {
-    "node": ">=16.x"
+    "node": "21.7.1"
   },
   "devDependencies": {
     "@babel/plugin-syntax-flow": "^7.14.5",
